# ibus-gjs

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  ibus-gjs.spec  ibus-gjs.spec.in  libtool  user.patch
data/theme/: gnome-shell.css
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  ibus-gjs.cron.d.ex  ibus-gjs.default.ex  ibus-gjs.doc-base.EX  ibus-gjs.substvars  init.d.ex  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
extensions/: Makefile  Makefile.am  Makefile.in
extensions/ibus-indicator@example.com/: extension.js  metadata.json  metadata.json.in  stylesheet.css
js/: Makefile  Makefile.am  Makefile.in
js/misc/: config.js  config.js.in
js/ui/status/ibus/: candidatePanel.js  common.js  ibusPanel.js  ibusPanel.js.in  imeDialog.js  indicator.js  languageBar.js  panel.js.in  panelBase.js  panelMenu.js  pangoAttrList.js  popupMenu.js  propItem.js  propertyManager.js  shellMenu.js  switcher.js  xkbLayout.js.in
po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  fr.po  ibus-gjs.pot  ja.po  zh_CN.po
